--- a/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
@@ -6,6 +6,12 @@
     
    
 }
+
+body {
+    background: #DEDEDE url('../Images/bg01.png') no-repeat fixed center 300px;
+    color: #676767;
+}
+
 a:link,a:visited,a:hover,a:active {
     text-decoration: none;
 }
@@ -233,9 +239,14 @@ th {
 }
 
 #centerContainer{
-    max-width: 1000px;
+    max-width: 955px;
     width: 85%;
     min-width: 300px;
+    background: #FFF;
+}
+
+#contentContainer{
+    padding: 10px;
 }
 
 .img_StatusCirkelGroen {
@@ -464,7 +475,8 @@ th {
     background-color: #DB5C3D;
     padding: 7px;
     font-size: large;
-    color: #FFF
+    color: #FFF;
+    font-weight:bold;
 }
 
 .itemContainer{
@@ -475,9 +487,11 @@ th {
 }
 
 .itemContent{
+    color: #676767;
     display: none;
     border-radius: 0px 0px 10px 0px;
     border: 2px solid #DB5C3D;
+    
 }
 
 .itemBox:target > .itemTitle{
@@ -487,3 +501,26 @@ th {
 .itemBox:target > .itemContent {
     display : block;
 }
+
+.iconExpand{
+    float: right;
+}
+
+.iconBg{
+    display: inline-block;
+    border-radius: 5px 0px;
+    background-color: #ffffff;
+    padding: 4px 4px 0px 4px;
+}
+
+.itemContentTitle{
+    color: #DB5C3D;
+    font-size:22px;
+    /*font-weight:bold;*/
+    padding: 5px;
+}
+
+.itemContentText{
+    padding: 2px 10px;
+}
+
