--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
@@ -1,67 +1,13 @@
 ﻿@{
     Layout = null;
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <nav>
-        <div class="Nav">
-            <img src="~/Images/home.png" />
-            <img src="~/Images/nav_left.png" />
-            <img src="~/Images/nav_right.png" />
-        </div>
-        <div class="Lists">
-            <ul>
-                <li>
-                    <h2>
-                        <a href="">
-                            <img src="~/Images/kalender.png" />
-
-                            Kalender
-                        </a>
-                    </h2>
-                    <ul class="dropdown">
-                        <li><a href="">Lesmomenten</a></li>
-                        <li><a href="~/Deelpagina's/Deadlines.cshtml">Deadlines</a></li>
-                        <li><a href="">Examens</a></li>
-                        <li><a href="">Vakantie</a></li>
-                        <li><a href="">Evenementen</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h2>
-                        <a href="~/Deelpagina's/TrajectOverzicht.cshtml">
-                            <img src="~/Images/traject.png" />
-                            Traject
-                        </a>
-</h2>
-                    <ul>
-                        <li><a href="~/Deelpagina's/LessenRoosterVMo.cshtml">Lessenrooster</a></li>
-                        <li><a href="">Module</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h2>
-                        <a href="">
-                            <img src="~/Images/contact.png" />
-                            Contact
-                        </a>
-</h2>
-                    <ul>
-                        <li><a href="" >Openingsuren</a></li>
-                        <li><a href="" >Trajectbegleiding</a></li>
-                        <li><a href="" >Docent</a></li>
-                        <li><a href="">Cursist</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</body>
-</html>
+<nav>
+    <div class="navIconSmall">
+        <a href="~/Deelpagina's/Default.cshtml"><img src="~/Images/1431366103_text_align_full-128.png" alt="Logo Sandwich" /></a>
+        <img src="~/Images/nav_left.png" alt="Nav Links" />
+        <img src="~/Images/nav_right.png" alt="Nav Rechts" />
+    </div>
+    <div class="navLogo">
+    <img src="~/Images/Logo_mobileCVO.jpg" alt="Logo MobileCVO"/>
+    </div>
+</nav>
