--- a/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
@@ -1,222 +1,39 @@
-﻿/*Opmaak voor de website*/
-* {
-    margin:0;
-    padding:0;
-    font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
-    
-   
-}
-a:link,a:visited,a:hover,a:active {
-    text-decoration: none;
-}
-
-main{
-    display:flex;
-    width:100%;
-    align-items:center;
-    justify-content:center;
-}
-
-#main{
-    clear:both;
-    /*margin:25px;*/
-    margin-bottom:100px;
-
-}
-
-.header{
-    width:100%;
-    min-height:90px;
-    box-sizing:border-box;
-    background-color:#4388cc;
-    border-bottom: 4px solid #00ffff;
-    /*border-bottom: 4px solid #DB5C3D;*/
-    margin-bottom: 10px;
-        
-}
-
-.header img{
-    float:left;
-    width:321px;
-    height:84px;
-    background-color:#ffffff;
-    margin-left:3px;
-    margin-top:2px;    
-    
-}
-
-.loginForm{
-    margin: 10px;
-    margin-right: 30px;
-    float:right;
-}
-
-.loginForm input{
-    display:block;
-}
-
-.loginForm label{
-    display:block;
-}
-
-.loginForm button{
-    float:right;
-    margin-top:5px;
-
-}*/
-
-/*.header p{
-    float:right;
-    margin-right:30px;
-    margin-top:30px;
-    color:white;
-}
-
-.header input{
-    margin-left:20px;
-    height:20px;
-}
-
-.header button{
-    clear:right;
-    float:right;
-    margin-top:5px;
-    margin-right:30px;
-    padding:4px;
-    width:80px;
-}*/
-
-
-/*Start nav code*/
-/*.Nav{
-    clear:both;
-    min-height:90px;
-    box-sizing:border-box;
-}
-
-.Nav img, .links h2,.spacing{
-    float:left;
-    font-size:38px;
-    
-}
-
-.links h2{
-    margin-top:50px;
-}
-
-.Nav img{
-    width:40px;
-    height:40px;
-    margin:20px;
-}
-
-.links img{
-    width:80px;
-    height:80px;
-    margin-left:10%;
-    
-}*/
-
-.Nav{
-    clear:both;
-    min-height:90px;
-    box-sizing:border-box;
-}
-
-.Nav img , ul h2,.spacing{
-    float:left;
-    font-size:38px;
-    
-}
-
-/*ul h2:not(.dropdown){
-    margin-top:50px;
-}*/
-
-.Nav img{
-    width:40px;
-    height:40px;
-    margin:20px;
-}
-
-.Lists img{
-    width:80px;
-    height:80px;   
-}
-
-.Nav{
-    float:left;
-}
-
-nav li{
-    float:left;
-    list-style:none;
-    padding-right:2px;
-    display:inline;
-    margin-left:10%;
-}
-
-nav ul ul li{
-    clear:both;
-    white-space:nowrap;
-}
-
-nav ul ul {
-	display: none;
-}
-
-nav ul li:hover > ul {
-	display: block;
-    position:absolute;
-    margin-top:82px;
-   
-}
-
-nav ul li:hover > ul li a{
-    border:solid;
-    border-color:black;
-    border-width:0,5px;
-    background-color:#e66845;
-    width:150px;
-    height:20px;
-    margin-top:-1px;
-    margin-left:15px;
-    padding:5px;
-    display:block;
-    color:white;
-}
-
-nav ul li:hover > ul li a:hover {
-    background-color:#4388cc;
-    color:black;
+﻿nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: flex-start;
+    align-items: flex-start;
 }
 
 
-/*Start footer code*/
-.footer{
-    clear:both;
-    position:fixed;
-    bottom:0;
-    background-color:#4388cc;
-    border-top: 4px solid #00ffff;
-    height:50px;
-    width:100%;
 
+#watermark {
+    margin-left: 10%;
+    height: 91%;
+    width: 80%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.1; /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
+    filter: alpha(opacity=10); /* for <= IE 8 */
+    background-image: url("../Images/Logo_CVOAntwerpen.png");
+    background-size: contain;
+    background-position:center,center,center,center;
+    background-repeat:no-repeat;
+    display: block;
+    z-index:-1;
 }
 
-.footer p{
-    margin-top:24px;
-    margin-left:30px;    
-    float:left;
+.navIconSmall img {
+    width: 30px;
+    height: 30px;
 }
 
-.footer img{
-    float:right;
-    width:264px;
-    height:55px;  
-    margin-bottom:2px;
-    margin-right:2px;    
-    margin-top:0px;
+.navLogo img {
+    height: 30px;
+    width: auto;
 }
 
 table, td {
@@ -232,7 +49,7 @@ th {
     color: #FFF;
 }
 
-#centerContainer{
+#centerContainer {
     max-width: 1000px;
     width: 85%;
     min-width: 300px;
@@ -273,31 +90,31 @@ th {
     display: inline-block;
 }
 
-.moodleCourse{
+.moodleCourse {
     font-size: 25px;
     padding-bottom: 10px;
 }
 
-.moodleAssignment{
-    font-size:medium;
+.moodleAssignment {
+    font-size: medium;
     font-weight: bold;
     padding: 0px 0px 10px 10px;
 }
 
-.moodleGrade{
+.moodleGrade {
     font-weight: normal;
     padding-left: 10px;
 }
 
-.containerBig{
-    width:100%;
+.containerBig {
+    width: 100%;
     border: 2px solid #DB5C3D;
     margin-bottom: 20px;
-    box-sizing:border-box;
+    box-sizing: border-box;
     border-radius: 10px 0px;
 }
 
-.containerSmall{
+.containerSmall {
     flex-direction: column;
     display: flex;
     width: 300px;
@@ -305,18 +122,18 @@ th {
     border: 2px solid #DB5C3D;
 }
 
-.containerOfAllThingsTiny{
-    align-items:flex-start;
-    justify-content:space-between;
+.containerOfAllThingsTiny {
+    align-items: flex-start;
+    justify-content: space-between;
     flex-direction: row;
     display: flex;
 }
 
 
 
-.containerLegende{
-    align-items:flex-start;
-    justify-content:space-between;
+.containerLegende {
+    align-items: flex-start;
+    justify-content: space-between;
     flex-direction: column;
     display: flex;
     flex-wrap: wrap;
@@ -324,9 +141,9 @@ th {
 }
 
 .containerTitle {
-    display : block;
+    display: block;
     width: 100%;
-    box-sizing:border-box;
+    box-sizing: border-box;
     background-color: #DB5C3D;
     padding: 7px;
     font-size: large;
@@ -335,42 +152,42 @@ th {
 }
 
 
-.legendeItems{
-    align-content:flex-end;
-    align-items:flex-start;
-    justify-content:flex-start;
+.legendeItems {
+    align-content: flex-end;
+    align-items: flex-start;
+    justify-content: flex-start;
     flex-direction: row;
     display: flex;
     flex-wrap: wrap;
 }
 
-.legendeItem{
+.legendeItem {
     width: 30%;
     min-width: 300px;
-    padding:5px;
+    padding: 5px;
 }
 
-.containerTraject{
+.containerTraject {
     display: flex;
     flex-wrap: wrap;
     border: 2px solid #DB5C3D;
 }
 
-.itemTraject{
+.itemTraject {
     width: 50%;
     padding: 4px 0px 4px 7px;
     display: block;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
-.shaded{
-    background-color:#FFF5F5;
+.shaded {
+    background-color: #FFF5F5;
     border-radius: 10px 0px;
 }
 
-.titleTraject{
+.titleTraject {
     display: block;
-    box-sizing:border-box;
+    box-sizing: border-box;
     background-color: #DB5C3D;
     padding: 7px;
     font-size: large;
@@ -378,49 +195,47 @@ th {
 }
 
 .containerCalendarRow {
-    display:flex;
-    box-sizing:border-box;
+    display: flex;
+    box-sizing: border-box;
 }
 
 .containerCalendarTitle {
-    box-sizing:border-box;
+    box-sizing: border-box;
     background-color: #DB5C3D;
     padding: 7px 7px 7px 7px;
     font-size: large;
     color: #FFF;
     flex-grow: 1;
-    flex-basis:100px;
+    flex-basis: 100px;
 }
 
-.containerCalendarRow{
+.containerCalendarRow {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
 }
 
-.containerCalendarColumn{
-    
+.containerCalendarColumn {
     flex-grow: 1;
-    flex-basis:100px;
+    flex-basis: 100px;
     padding: 2px 7px 2px 7px;
 }
 
-.columnTiny{
-    flex-basis:50px;
+.columnTiny {
+    flex-basis: 50px;
 }
 
-.columnBig{
-    flex-basis:200px;
+.columnBig {
+    flex-basis: 200px;
 }
 
-.columnMed{
-    flex-basis:150px;
+.columnMed {
+    flex-basis: 150px;
 }
 
-.optionButton{
-    width:125px;
-    height:50px;
+.optionButton {
+    width: 125px;
+    height: 50px;
     border: none;
     font-size: large;
     color: #000;
@@ -428,62 +243,61 @@ th {
     margin: 5px;
 }
 
-.optionSelected{
+.optionSelected {
     background-color: #DB5C3D;
     color: #FFF;
 }
 
-.optionButton:hover{
+.optionButton:hover {
     background-color: #D88977;
 }
 
-.containerOptions{
+.containerOptions {
     display: flex;
-    flex-direction:row;
-    justify-content:space-around;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
     border: none;
 }
 
-.itemBox{
+.itemBox {
     border-radius: 10px 0px;
     min-width: 300px;
     width: 45%;
     max-width: 500px;
-    
     margin-bottom: 20px;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 
-.itemTitle{
+.itemTitle {
     border-radius: 10px 0px;
-    display : block;
+    display: block;
     width: 100%;
-    box-sizing:border-box;
+    box-sizing: border-box;
     background-color: #DB5C3D;
     padding: 7px;
     font-size: large;
-    color: #FFF
+    color: #FFF;
 }
 
-.itemContainer{
-    display:flex;
-    justify-content:space-around;
-    align-content:flex-start;
-    flex-flow:row wrap;
+.itemContainer {
+    display: flex;
+    justify-content: space-around;
+    align-content: flex-start;
+    flex-flow: row wrap;
 }
 
-.itemContent{
+.itemContent {
     display: none;
     border-radius: 0px 0px 10px 0px;
     border: 2px solid #DB5C3D;
 }
 
-.itemBox:target > .itemTitle{
+.itemBox:target > .itemTitle {
     border-radius: 10px 0px 0px 0px;
 }
 
 .itemBox:target > .itemContent {
-    display : block;
+    display: block;
 }
