--- a/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
@@ -7,19 +7,33 @@
     align-items: flex-start;
 }
 
+main{
+    display:flex;
+    width:100%;
+    align-items:center;
+    justify-content:center;
+}
 
+body {
+    background: #DEDEDE url('../Images/bg01.png') no-repeat fixed center 300px;
+    color: #676767;
+}
 
-#watermark {
-    margin-left: 10%;
+a:link,a:visited,a:hover,a:active {
+    text-decoration: none;
+}
+
+.#watermark {
+    margin: 0 auto;
     height: 91%;
-    width: 80%;
+    width: 50%;
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0.1; /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
     filter: alpha(opacity=10); /* for <= IE 8 */
     background-image: url("../Images/Logo_CVOAntwerpen.png");
-    background-size: contain;
+    background-size: auto;
     background-position:center,center,center,center;
     background-repeat:no-repeat;
     display: block;
@@ -49,42 +63,54 @@ th {
     color: #FFF;
 }
 
-#centerContainer {
+#centerContainer{
     max-width: 1000px;
+    max-width: 955px;
     width: 85%;
     min-width: 300px;
+    background: #FFF;
+}
+
+#contentContainer{
+    padding: 10px;
+    background-image: url("../Images/Logo_CVOAntwerpen_watermark.png");
+    background-size: auto;
+    background-attachment: fixed;
+    background-position:center,center,center,center;
+    background-repeat:no-repeat;
+    back
 }
 
 .img_StatusCirkelGroen {
-    background-image: url('../Images/Circle_Green.png');
+    background-image: url('../Images/Circle_V.png');
     width: 16px;
     height: 16px;
     display: inline-block;
 }
 
 .img_StatusCirkelBlauw {
-    background-image: url('../Images/Circle_Blue.png');
+    background-image: url('../Images/Circle_empty.png');
     width: 16px;
     height: 16px;
     display: inline-block;
 }
 
 .img_StatusCirkelRood {
-    background-image: url('../Images/Circle_Red.png');
+    background-image: url('../Images/Circle_X.png');
     width: 16px;
     height: 16px;
     display: inline-block;
 }
 
 .img_StatusNoteRood {
-    background-image: url('../Images/Note_Red.png');
+    background-image: url('../Images/Note_X.png');
     width: 16px;
     height: 16px;
     display: inline-block;
 }
 
 .img_StatusNoteGroen {
-    background-image: url('../Images/Note_Green.png');
+    background-image: url('../Images/Note_V.png');
     width: 16px;
     height: 16px;
     display: inline-block;
@@ -129,8 +155,6 @@ th {
     display: flex;
 }
 
-
-
 .containerLegende {
     align-items: flex-start;
     justify-content: space-between;
@@ -149,6 +173,7 @@ th {
     font-size: large;
     color: #FFF;
     border-radius: 5px 0px 0px 0px;
+    font-size:22px;
 }
 
 
@@ -279,6 +304,7 @@ th {
     padding: 7px;
     font-size: large;
     color: #FFF;
+    font-size:22px;
 }
 
 .itemContainer {
@@ -292,6 +318,7 @@ th {
     display: none;
     border-radius: 0px 0px 10px 0px;
     border: 2px solid #DB5C3D;
+    background-color: #FFF;
 }
 
 .itemBox:target > .itemTitle {
@@ -300,4 +327,26 @@ th {
 
 .itemBox:target > .itemContent {
     display: block;
+}
+
+.iconExpand{
+    float: right;
+}
+
+.iconBg{
+    display: inline-block;
+    border-radius: 5px 0px;
+    background-color: #DB5C3D;
+    padding: 4px 4px 0px 4px;
+}
+
+.itemContentTitle{
+    color: #DB5C3D;
+    font-size:22px;
+    /*font-weight:bold;*/
+    padding: 5px;
+}
+
+.itemContentText{
+    padding: 2px 10px;
 }
